syntax="proto3";

import "google/protobuf/timestamp.proto";

import "cells-setter.proto";
import "cells-activitystream.proto";

option go_package="github.com/pydio/cells/v5/common/proto/chat";
package chat;

enum RoomType {
    GLOBAL    = 0;
    WORKSPACE = 1;
    USER      = 2;
    NODE      = 3;
    ANY       = 4;
}

message ChatRoom {
    option (setter.all_fields) = true;
    string Uuid = 1;
    RoomType Type = 2;
    string RoomTypeObject = 3;

    string RoomLabel = 4;
    repeated string Users = 5;
    int32 LastUpdated = 6;
}

message ChatMessage {
    option (setter.all_fields) = true;
    string Uuid = 1;
    string RoomUuid = 2;

    string Message = 3;
    string Author = 4;
    int64 Timestamp = 5;

    // Additional information or metadata
    activity.Object Activity = 6;
    map<string,string> Info = 7;
}

service ChatService {
    rpc PutRoom(PutRoomRequest) returns (PutRoomResponse);
    rpc DeleteRoom(DeleteRoomRequest) returns (DeleteRoomResponse);
    rpc ListRooms(ListRoomsRequest) returns (stream ListRoomsResponse);
    rpc ListMessages(ListMessagesRequest) returns (stream ListMessagesResponse);
    rpc PostMessage(PostMessageRequest) returns (PostMessageResponse);
    rpc DeleteMessage(DeleteMessageRequest) returns (DeleteMessageResponse);
}

message PutRoomRequest {
    ChatRoom Room = 1;
}

message PutRoomResponse {
    ChatRoom Room = 1;
}


message PostMessageRequest {
    repeated ChatMessage Messages = 1;
    map<string, ChatRoom> KnownRooms = 2;
}
message PostMessageResponse {
    bool Success = 1;
    repeated ChatMessage Messages = 2;
}

message DeleteMessageRequest {
    repeated ChatMessage Messages = 1;
    map<string, ChatRoom> KnownRooms = 2;
}
message DeleteMessageResponse {
    bool Success = 1;
}

message ListMessagesRequest {
    string RoomUuid = 1;
    // List starting at a given message ID
    string LastMessage = 2;
    int64 Offset = 3;
    int64 Limit = 4;
}
message ListMessagesResponse {
    ChatMessage Message = 1;
}

message ListRoomsRequest{
    RoomType ByType = 1;
    string TypeObject = 2;
}

message ListRoomsResponse{
    ChatRoom Room = 1;
}

message DeleteRoomRequest {
    ChatRoom Room = 1;
}

message DeleteRoomResponse{
    bool Success = 1;
}

message ChatEvent {
    option (setter.all_fields) = true;
    ChatMessage Message = 1;
    ChatRoom Room = 2;
    string Details = 3;
}

enum WsMessageType {
    JOIN = 0;
    LEAVE = 1;
    POST = 2;
    ROOM_UPDATE = 3;
    HISTORY = 4;
    DELETE_MSG = 5;
    DELETE_ROOM = 6;
}

message WebSocketMessage {
    option (setter.all_fields) = true;
    WsMessageType Type = 1 [json_name="@type"];
    ChatRoom Room = 2;
    ChatMessage Message = 3;
}